<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HackNTU 2015</string>

    <!--<string name="parse_app_id">AfM79brCkxAAkvQQ08dxphlbogFcfzjH4hobqTVi</string>-->
    <!--<string name="parse_client_key">pQwos49fJjtPI9PDJwlTva94K0jcFwpYDPbAGgvv</string>-->

    <string name="parse_app_id">J9hu199jWcl6tME6QClUaaTyLoHALbJiGV6gHWgq</string>
    <string name="parse_client_key">k6lfubl75W4nRgGdNfaqLE5dOKhflTHyw25ObxcO</string>

    <string name="action_three_day_view">Three-day view</string>
    <string name="action_five_day_view">Five-day view</string>

    <string name="contact_header">CONTACT</string>
    <string name="edit_name_hint">Your Name (optional)</string>
    <string name="edit_email_hint">you@university.edu (optional)</string>
    <string name="edit_location_hint">Your location (optional)</string>
    <string name="issue_header">ISSUE</string>
    <string name="spin_category_hint">Category</string>
    <string name="edit_category_hint">Other category</string>
    <string name="edit_description_hint">Describe your issue here.</string>
    <string name="action_report">SUBMIT</string>

    <string name="action_search">Search</string>
    <string name="search_hint">Filter results</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="menu_map_name">map</string>
    <string name="mapview_content_description">map</string>
    <string name="menu_schedule_name">View</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Contact View-->
    <string name="contact_title">Contact</string>
    <string name="title_email">Email</string>
    <string name="title_call">Call</string>
    <string name="title_findus">Find Us</string>
    <string name="email">help@hackntu.org</string>
    <string name="call">0955446677</string>
    <string name="findus">新體頂樓</string>
    <string name="loading">loading</string>
    <string name="back_twice_exit">Tap back button twice to exit.</string>

</resources>
