<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/primary_text_default_material_light"
            android:padding="8dp"
            android:textSize="22sp"
            android:text="@string/contact_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/gradient_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="6dp"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/primary_text_default_material_light"
                android:text="@string/title_call"/>

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_light"
                android:text="@string/loading"
                android:autoLink="phone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/primary_text_default_material_light"
                android:text="@string/title_email"/>

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_light"
                android:text="@string/loading"
                android:autoLink="email"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="@color/primary_text_default_material_light"
                android:text="@string/title_findus"/>

            <TextView
                android:id="@+id/txt_where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_light"
                android:text="@string/loading"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>